redefine model of GDP PPI PMI CPI
